# Example_Project

./: .env  .gitignore  .pylintrc  README.md  requirements.txt  setup.cfg
myproject/: script.py
myproject/anotherpkg/: helpers.py  stuff.py
myproject/mypkg/: hello.py  helpers.py
script/: script.py
src/mypackage/: main.py
src/mypackage/core/: anothermodule.py  coremodule.py
src/mypackage/logger/: mylogger.py
src/mypackage/ui/: main_window.py  main_window.ui  main_window_ui.py  ui_main_window.py
tests/anotherpkg/: test_stuff.py
tests/core/: test_coremodule.py
