[metadata]
name = mypackage
version = attr: mypackage.__version__
author = Me
; author_email = your@email.address
; url = 
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
; keywords = example, setuptools
; license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pyqt6 == 6.4.0

[options.packages.find]
where=src

[options.extras_require]
dev = 
    black>=22.12.0
    pylint>=2.15.10
    mypy>=0.991
